--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,11 @@ dependencies {
 
 	// PSA: Some older mods, compiled on Loom 0.2.1, might have outdated Maven POMs.
 	// You may need to force-disable transitiveness on them.
+	compile 'net.dv8tion:JDA:4.2.0_223'
+}
+
+repositories {
+	jcenter()
 }
 
 processResources {
