--- a/gradle.properties
+++ b/gradle.properties
@@ -3,15 +3,15 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/use
-	minecraft_version=1.16.4
-	yarn_mappings=1.16.4+build.6
-	loader_version=0.10.6+build.214
+	minecraft_version=20w51a
+	yarn_mappings=20w51a+build.13
+	loader_version=0.10.8
 
 # Mod Properties
 	mod_version = 1.0.0
-	maven_group = net.fabricmc
-	archives_base_name = fabric-example-mod
+	maven_group = me.mrvintage
+	archives_base_name = prox
 
 # Dependencies
 	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-	fabric_version=0.25.1+build.416-1.16
+	fabric_version=0.28.4+1.17
